Add swagger done