@@ -3,6 +3,7 @@ package spring.starter.security.filter;
 //Library buat intercept spring security
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.servlet.FilterChain;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.web.authentication.AbstractAuthenticationProcessingFilter;
 
@@ -20,12 +21,14 @@ import java.io.IOException;
 
 public class UsernamePasswordAuthProcessingFilter extends AbstractAuthenticationProcessingFilter {
 
-    private final AuthenticationSuccessHandler successHandler;
-    private final AuthenticationFailureHandler failureHandler;
     private final ObjectMapper objectMapper;
 
-    public UsernamePasswordAuthProcessingFilter(String defaultFilterProcessesUrl, ObjectMapper objectMapper, AuthenticationSuccessHandler successHandler, AuthenticationFailureHandler failureHandler) {
-        //Isinya adalah path dari request yang ingin di intercept
+    private final AuthenticationSuccessHandler successHandler;
+
+    private final AuthenticationFailureHandler failureHandler;
+
+    public UsernamePasswordAuthProcessingFilter(String defaultFilterProcessesUrl, ObjectMapper objectMapper, AuthenticationSuccessHandler successHandler,
+                                                AuthenticationFailureHandler failureHandler) {
         super(defaultFilterProcessesUrl);
 
         //Ini constructor injection untuk ObjectMapper
@@ -34,31 +37,29 @@ public class UsernamePasswordAuthProcessingFilter extends AbstractAuthentication
         this.failureHandler = failureHandler;
     }
 
-    //Method ini berguna untuk melakukan authentication dari class yang di intercept
-    //Authentication adalah object yang mereturn token yang nantinya akan digunakan untuk proses authentication
     @Override
-    public Authentication attemptAuthentication(HttpServletRequest request, HttpServletResponse response) throws AuthenticationException, IOException, ServletException {
-        LoginRequest loginRequest = objectMapper.readValue(request.getReader(), LoginRequest.class);
-        if (loginRequest.getUsername().isBlank() || loginRequest.getPassword().isBlank())
-            throw new BadRequestException("Username or Password is Blank");
-
-        UsernamePasswordAuthenticationToken token = new UsernamePasswordAuthenticationToken(loginRequest.getUsername(), loginRequest.getPassword());
-        //Tinggal return untuk proses authenticationnya
+    public Authentication attemptAuthentication(HttpServletRequest request, HttpServletResponse response)
+            throws AuthenticationException, IOException, ServletException {
+        LoginRequest dto = objectMapper.readValue(request.getReader(), LoginRequest.class);
+        if(StringUtils.isBlank(dto.getUsername()) || StringUtils.isBlank(dto.getPassword())) {
+            throw new BadRequestException("username.password.shouldbe.provided");
+        }
+        UsernamePasswordAuthenticationToken token = new UsernamePasswordAuthenticationToken(dto.getUsername(), dto.getPassword());
         return this.getAuthenticationManager().authenticate(token);
     }
 
     //method dimana jika berhasil apa yang selanjutnya akan dilakukan
     @Override
-    protected void successfulAuthentication(HttpServletRequest request, HttpServletResponse response, FilterChain chain, Authentication authResult) throws IOException, ServletException {
-//        super.successfulAuthentication(request, response, chain, authResult);
+    protected void successfulAuthentication(HttpServletRequest request, HttpServletResponse response, FilterChain chain,
+                                            Authentication authResult) throws IOException, ServletException {
         this.successHandler.onAuthenticationSuccess(request, response, authResult);
     }
 
 
     //method dimana jika gagal apa yang selanjutnya akan dilakukan
     @Override
-    protected void unsuccessfulAuthentication(HttpServletRequest request, HttpServletResponse response, AuthenticationException failed) throws IOException, ServletException {
-//        super.unsuccessfulAuthentication(request, response, failed);
+    protected void unsuccessfulAuthentication(HttpServletRequest request, HttpServletResponse response,
+                                              AuthenticationException failed) throws IOException, ServletException {
         this.failureHandler.onAuthenticationFailure(request, response, failed);
     }
 
